Added rewriter.runInScope option to allow certain plugins to start without needing a reload
Fixed cache not being properly cleared sometimes
Fixed some types in editor
Fixed regression with new scripts being named "undefined"